--- a/style.css
+++ b/style.css
@@ -125,6 +125,12 @@ h1{
     margin-bottom: 10px;
     text-decoration: underline;
 }
+.cookie h4{
+    font-size: 25px;
+    color: #fff;
+    margin-bottom: 10px 0;
+    font-family: 'Brush Script MT', cursive;
+}
 
 
 
