--- a/style.css
+++ b/style.css
@@ -128,8 +128,8 @@ h1{
 .cookie h4{
     font-size: 25px;
     color: #fff;
-    margin-bottom: 10px 0;
-    font-family: 'Brush Script MT', cursive;
+    margin-bottom: 10px;
+    font-family: Garamond, serif;
 }
 
 
